Add pictures of the very first 3d print.

--- a/slides/fwatch_fosdem2015.tex
+++ b/slides/fwatch_fosdem2015.tex
@@ -695,6 +695,23 @@
 \begin{frame}{First 3D print}
 
   \begin{itemize}
+  \item Platic material (additive methode)
+  \end{itemize}
+
+  \begin{center}
+    \includegraphics[height=5cm]{case-design-print-v1.eps}~
+    \includegraphics[height=5cm]{case-design-print-v1-2.eps}
+  \end{center}
+
+  \note[item]{Rough when not polished}
+  \note[item]{Not water-tight}
+
+\end{frame}
+
+%------------ FRAME --------------------------------------------------
+\begin{frame}{Second 3D print}
+
+  \begin{itemize}
   \item Platic material
   \end{itemize}
 
@@ -708,7 +725,7 @@
 \end{frame}
 
 %------------ FRAME --------------------------------------------------
-\begin{frame}{Second 3D print}
+\begin{frame}{Third 3D print}
 
   \begin{itemize}
   \item Resin material
@@ -724,7 +741,7 @@
 \end{frame}
 
 %------------ FRAME --------------------------------------------------
-\begin{frame}{Third 3D print}
+\begin{frame}{Forth 3D print}
 
   \begin{itemize}
   \item Resin material
