Fix a few slides.

--- a/slides/fwatch_fosdem2015.tex
+++ b/slides/fwatch_fosdem2015.tex
@@ -176,13 +176,15 @@
   \vskip 1cm
 
   \textbf{Gift Requirement}
-  \vskip 1cm
+  \vskip 7mm
   \begin{enumerate}
   \item customization of the gift
-    \vskip 7mm
+    %\vskip mm
   \item hackable gift
-    \vskip 7mm
+    %\vskip 7mm
   \item free/open source
+    %\vskip 7mm
+  \item use only FOSS tools
   \end{enumerate}
 
   \note[item]{Retirement timing hacker}
@@ -485,7 +487,8 @@
   \item 4 x 4 cm
   \item 4 layers
   \item Components on both sides
-  \item Manufactured by Eurocircuits
+  %\item Manufactured by Eurocircuits
+  \item Licended under CERN OHL v1.2
   \end{itemize}
 
   \begin{center}
@@ -559,7 +562,7 @@
     \includegraphics[height=4.5cm]{bl_led_on.eps}
   \end{center}
 
-  \textbf{FAIL!}
+  \textbf{Not good!}
 
   \note[item]{We first though of putting a few LED on the top of the PCB}
   \note[item]{And a opaque piece of plexiglass (~1mm) to diffuse the light}
@@ -1067,7 +1070,7 @@
   \begin{center}
     tiny 2D graphic library \\
     \vskip 7mm
-    adapt the library to out screen \\
+    adapt the library to our screen \\
   \end{center}
 
   \vskip 7mm
