--- a/slides/fwatch_fosdem2015.tex
+++ b/slides/fwatch_fosdem2015.tex
@@ -9,6 +9,7 @@
 \setbeamertemplate{headline}{}
 
 %\setbeameroption{show notes}
+%\setbeameroption{show only notes}
 \setbeameroption{hide notes}
 
 %\hypersetup{pdfpagemode=FullScreen} % makes your presentation go automatically to full screen
@@ -238,9 +239,8 @@
   \item Small size (footprint)
   \end{itemize}
 
-  \note[item]{Fill up slide??}
-  \note[item]{Talk about feasibility study??}
-  \note[item]{}
+  %\note[item]{Fill up slide??}
+  %\note[item]{Talk about feasibility study??}
   \note[item]{After this introduction, I'll talk more about design process}
   \note[item]{We started with the component selection}
   \note[item]{All components must be low power, to have the longest possible battery life}
@@ -274,8 +274,7 @@
     \end{column}%
   \end{columns}
 
-  \note[item]{More detail about the MCU selection??}
-
+  %\note[item]{More detail about the MCU selection??}
   \note[item]{The micro controller we chose is a 32-bit cortex-M3 from Silicon Labs}
   \note[item]{It has a lot of memory}
   \note[item]{And an extremely low power consumption}
@@ -371,7 +370,7 @@
     \end{column}%
   \end{columns}
 
-  \note[item]{Replace by hello world picture??}
+  %\note[item]{Replace by hello world picture??}
   \note[item]{For the display, we chose a memory LCD from Sharp}
   \note[item]{It's 128 by 128 pixel, for 1.28 inches (~3cm)}
   \note[item]{This LCD requires a very low current to keep the image, because it has a memory in each pixel}
@@ -436,10 +435,12 @@
     %\includegraphics[height=5cm]{battery.eps}
   \end{center}
 
-  \note{Talk about foreseen improvements??}
-  \note[item]{microSD card to store for example GPS tracks}
+  \note[item]{micro-SD card to store for example GPS tracks}
   \note[item]{USB is used for battery charging, firmware upload, data transfer}
   \note[item]{It also includes a buzzer and a vibrating motor to notify the user}
+  \note[item]{Bluetooth for wireless sensors $\rightarrow$ heart-rate monitor, ...}
+  \note[item]{Low noise amplifier to improve GPS sensitivity}
+  \note[item]{Improve power management $\rightarrow$ save battery}
 
 \end{frame}
 
@@ -454,7 +455,7 @@
 
   \begin{itemize}
   \item CERN is contributing
-  \item Developer in the team (help, bugfix, feedback)
+  \item Developers in the team (help, bugfix, feedback)
   \item New features making routing easier (e.g push\&shove)
   \item Script to generate placement pdf
   \end{itemize}
@@ -462,19 +463,20 @@
   \vskip 6mm
   Interested in knowing more about KiCad developments?
   \begin{itemize}
-  \item Visit the EDA tools dev room tomorrow
+  \item Visit the EDA dev room (AW1.124) tomorrow
   \end{itemize}
 
-  \note[item]{make advert. for contribution??}
+  %\note[item]{make advert. for contribution??}
   \note[item]{I will now talk about the PCB design}
   \note[item]{To design the pcb, we chose kicad}
   \note[item]{The choice was pretty straight forward, as cern is contributing to the project}
-  \note[item]{The reason cern is contributing is to improve open source design sharing}
-  \note[item]{The goal is to make it comparable to the mid-end commercial tools}
-  \note[item]{Also we had a kicad developer in the team}
+  %\note[item]{The reason cern is contributing is to improve open source design sharing}
+  %\note[item]{The goal is to make it comparable to the mid-end commercial tools}
+  \note[item]{Also we had kicad developers in the team}
   \note[item]{This was very useful to get quick help and bugfixes}
   \note[item]{On the other hand, the watch project allowed to systematically list all the points to be improved}
   \note[item]{When we started the pcb design, kicad just included the push\&shove function, it really made the routing easier}
+  \note[item]{We also wrote a script to generate component placement pdf $\rightarrow$ for hand assembly}
   \note[item]{If you want to know more about kicad, it's feature and the future plans I invite you to visit the EDA dev room tomorrow}
 
 \end{frame}
@@ -512,7 +514,7 @@
 \begin{frame}{PCB assembly \& validation}
 
   Prototypes assembled by hand
-
+  \vskip 5mm
   Fully working, except two minor bugs
 
   \begin{itemize}
@@ -525,8 +527,9 @@
     %\item Not all MCU pins as IRQ source
     %\item Polling drains the battery quickly
     %\end{itemize}
-  \item Fixed with few cuts and wires!
   \end{itemize}
+
+  $\rightarrow$ Fixed with few cuts and wires!
 
   \begin{center}
     \includegraphics[height=3cm]{pcb_mounted_bottom.eps}~
@@ -568,7 +571,7 @@
   \textbf{Not good!}
 
   \note[item]{We first though of putting a few LED on the top of the PCB}
-  \note[item]{And a opaque piece of Plexiglas's (~1mm) to diffuse the light}
+  \note[item]{And a opaque piece of Plexiglas (~1mm) to diffuse the light}
   \note[item]{But as you can see on the picture, the light distribution is not uniform}
 
 \end{frame}
@@ -620,7 +623,7 @@
 
   \begin{itemize}
   \item No mechanical engineer
-  \item No experience in 3d design
+  \item No experience in 3d design/printing
   \item Evaluate existing free CAD tools \\
     Freecad, OpenSCAD, Open CASCADE, ...
   \end{itemize}
@@ -635,14 +638,20 @@
 
   \pause
   \begin{itemize}
-  \item Decided to use \textbf{Freecad}
+  \item Decided to use \textbf{FreeCAD}
   \end{itemize}
 
   \begin{center}
     \includegraphics[height=2cm]{freecad_logo.eps}
   \end{center}
 
-  \note{}
+  \note[item]{The biggest challenge in this project was probably the mechanical design of the case}
+  \note[item]{Because we had no mechanical engineer in the team}
+  \note[item]{And also no experience with 3d design and 3d printing}
+  \note[item]{We evaluated the exiting free CAD tools [NEXT], based on:}
+  \note[item]{The documentation, the support (forum)}
+  \note[item]{Also the user-friendliness and the learning curve [NEXT]}
+  \note[item]{In the end, we decided to use FreeCAD}
 
 \end{frame}
 
@@ -650,6 +659,7 @@
 \begin{frame}{Mechanical design}
 
   Full of new challenges
+  \vskip 5mm
 
   \begin{itemize}
   \item Learning Freecad from scratch
@@ -658,13 +668,22 @@
   \end{itemize}
 
   \pause
-  \vskip 6mm
-  It's time for a live demo!
+  \vskip 9mm
+  \begin{center}
+    It's time for a live demo!
+  \end{center}
 
-  \note[item]{Learn Freecad from scratch = no mech engineer in the team, lots of online tutorials}
-  \note[item]{3D printing = didn't knew the domain, studied the main 3d printing services}
-  \note[item]{3D printing = every order was exiting, to see the result}
-  \note[item]{OR live demo at the end of mechanics section??}
+  \note[item]{We started to learn FreeCAD}
+  \note[item]{A lot of online ressources (tutorial, forums, ...)}
+  \note[item]{After leanring the basics, we had to design a watch case}
+  \note[item]{And then learn about 3D printing}
+  \note[item]{First looked for local companies}
+  \note[item]{Then ear about online services like: Sculpteo, Shapeways}
+  \note[item]{..[NEXT] time for a little live demo}
+  %\note[item]{Learn Freecad from scratch = no mech engineer in the team, lots of online tutorials}
+  %\note[item]{3D printing = didn't knew the domain, studied the main 3d printing services}
+  %\note[item]{3D printing = every order was exiting, to see the result}
+  %\note[item]{OR live demo at the end of mechanics section??}
 
 \end{frame}
 
@@ -695,10 +714,13 @@
     \includegraphics[height=4.8cm]{case-design-model.eps}
   \end{center}
 
-  Making of movie (6 hours in 5 minutes)
+  Making of movie (6 hours summarised in 5 minutes)
   \url{http://www.ohwr.org/projects/f-watch/wiki/Movies}
 
-  \note[item]{}
+  \note[item]{This was just a quick example}
+  \note[item]{You can imagine that drawing the watch case took lot more time}
+  \note[item]{You can see here the final result}
+  \note[item]{If you are interested, a 5 min movie is available on our website}
 
 \end{frame}
 
@@ -706,7 +728,7 @@
 \begin{frame}{First 3D print}
 
   \begin{itemize}
-  \item Plastic material (additive method)
+  \item Fused plastic material - Low cost 3D printer
   \end{itemize}
 
   \begin{center}
@@ -714,8 +736,10 @@
     \includegraphics[height=5cm]{case-design-print-v1-2.eps}
   \end{center}
 
-  \note[item]{Rough when not polished}
-  \note[item]{Not water-tight}
+  %\note[item]{FDM = Fused deposition modeling}
+  \note[item]{Very first print, done with a cheap 3D printer}
+  \note[item]{Poor quality}
+  \note[item]{Too low resolution}
 
 \end{frame}
 
@@ -723,15 +747,17 @@
 \begin{frame}{Second 3D print}
 
   \begin{itemize}
-  \item Plastic material
+  \item Plastic material (powder)
   \end{itemize}
 
   \begin{center}
     \includegraphics[height=5cm]{case-design-print-v2.eps}
   \end{center}
 
-  \note[item]{Rough when not polished}
-  \note[item]{Not water-tight}
+  \note[item]{The second was better}
+  \note[item]{The resolution was good}
+  \note[item]{But not smooth}
+  \note[item]{And not water-tight}
 
 \end{frame}
 
@@ -746,8 +772,10 @@
     \includegraphics[height=4.1cm]{case-design-print-v3.eps}
   \end{center}
 
-  \note{Supposed to be water-tight, not tested though}
-  \note{Smoother finish than raw plastic}
+  \note[item]{Then we tried another material, a resin}
+  \note[item]{Supposed to be water-resistant}
+  \note[item]{Smooth surface}
+  \note[item]{We realised that the screw supposed to hold the two parts of the case together were not holding well!}
 
 \end{frame}
 
@@ -764,8 +792,10 @@
     \includegraphics[height=4.5cm]{case_new_screws-3.eps}
   \end{center}
 
-  \note{Talk about improvements to be done?? Water-resistance}
-  \note{}
+ % \note{Talk about improvements to be done?? Water-resistance}
+  \note[item]{So we modified the model and put the screws through the top of the case}
+  \note[item]{And we have some nuts in the bottom part}
+  \note[item]{This way, the case parts are really holding well}
 
 \end{frame}
 
@@ -779,13 +809,12 @@
     \includegraphics[height=4.5cm]{button_circlip.eps}
   \end{center}
 
-  \note[item]{maybe some hand drawing of our ideas?}
+  %\note[item]{maybe some hand drawing of our ideas?}
   \note[item]{Another challenge was the buttons}
   \note[item]{First we though of using small springs to push the button back, but to complex in the end.}
-  \note[item]{With a switch that needs a big force to press, the button is going back in place.}
-  \note[item]{Then using rivets, tricky to manufacture.}
-  \note[item]{Final choice, 3d printed buttons.}
-
+  \note[item]{Did some tests with the switch $\rightarrow$ the button is going back in place}
+  \note[item]{Oring for water-resistance}
+  \note[item]{Circlip to hold the button in place}
 
 \end{frame}
 
@@ -818,8 +847,10 @@
     \includegraphics[height=2cm]{plexiglass.eps}
   \end{center}
 
-  \note[item]{I want to build this watch, what should I do?}
+  %\note[item]{I want to build this watch, what should I do?}
   \note[item]{Components available from main suppliers}
+  \note[item]{Programmer to write the bootloader}
+  \note[item]{}
   %\note[item]{Talk about BGA soldering on the next slide!}
 
 \end{frame}
@@ -875,7 +906,13 @@
     \url{git://ohwr.org/f-watch.git}
   \end{center}
 
-  \note[item]{}
+  \note[item]{On the software side, it is pretty standard}
+  \note[item]{You download the sources from the GIT repository}
+  \note[item]{We don't have binary release yet}
+  \note[item]{So you will have to compile the bootloader and flash it to the micro-controller using the programmer}
+  \note[item]{Then compile the application software and flash it using the bootloader}
+  \note[item]{Then you can modify, write your own applications, etc...}
+  \note[item]{..[NEXT] cost summary}
 
 \end{frame}
 
@@ -898,10 +935,12 @@
     \end{table}
   \end{center}
 
-  \note[item]{The price in euro are converted from swiss franc with the exchange rate of last week}
-  \note[item]{So it might not be up to date ;)}
-  \note[item]{Review table style to fit Federico's}
-  \note[item]{Next is Federico slide on software}
+  %\note[item]{The price in euro are converted from swiss franc with the exchange rate of last week}
+  %\note[item]{So it might not be up to date ;)}
+  %\note[item]{Review table style to fit Federico's}
+  \note[item]{}
+  \note[item]{}
+  \note[item]{..[NEXT] Federico slide on software}
 
 \end{frame}
 
@@ -1128,7 +1167,7 @@
     \begin{figure}[h!]
       \centering
       \movie[height=5cm, width = 5cm, autostart, once, showcontrols=true,
-        borderwidth=1pt, poster]{Applications Demonstration}{bird.avi}
+        borderwidth=1pt, poster]{Applications Demonstration}{../video/fosdemlow.mp4}
     \end{figure}
   \end{center}
   \note{just comment the video. The menu easy to configue thanks to a config
