--- a/slides/fwatch_fosdem2015.tex
+++ b/slides/fwatch_fosdem2015.tex
@@ -600,6 +600,8 @@
 
   Current try: Custom-made module
 
+  $\rightarrow$ Low quantity, cheap ($<$ 5\$/pces)
+
   \begin{center}
     \includegraphics[height=4.5cm]{bl_custom_off.eps}~
     \pause
@@ -1162,12 +1164,13 @@
   \end{center}
 \end{frame}
 
+%------------ FRAME --------------------------------------------------
 \begin{frame}{Demo}
   \begin{center}
     \begin{figure}[h!]
       \centering
       \movie[height=5cm, width = 5cm, autostart, once, showcontrols=true,
-        borderwidth=1pt, poster]{Applications Demonstration}{../video/fosdemlow.mp4}
+        borderwidth=1pt, poster]{Applications Demonstration}{../videos/fosdemlow.mp4}
     \end{figure}
   \end{center}
   \note{just comment the video. The menu easy to configue thanks to a config
@@ -1175,7 +1178,6 @@
 \end{frame}
 
 %------------ FRAME --------------------------------------------------
-
 \begin{frame}{Documentation}
   \Large
   \begin{center}
@@ -1203,12 +1205,14 @@
     \begin{column}{.55\textwidth}
       \begin{itemize}
       \item free PCB design
-        \vskip 8mm
+        \vskip 7mm
       \item free mechanic design
-        \vskip 8mm
+        \vskip 7mm
       \item free software
-        \vskip 8mm
+        \vskip 7mm
        \item free tools
+         \vskip 7mm
+       \item free time
       \end{itemize}
         \note[item]{just read list}
         \note[item]{Free Tools --- This is madness! --- Madness? This
