Fix minor issues on slides (matthieu)

--- a/slides/fwatch_fosdem2015.tex
+++ b/slides/fwatch_fosdem2015.tex
@@ -256,11 +256,10 @@
   \begin{columns}[T] % align columns
     \begin{column}{.48\textwidth}
 
-      Micro-controller
+      Micro-controller (EFM32)
       \vskip 6mm
       \begin{itemize}
       \item Silicon Labs
-      \item 13 x 9.5 x 1.8mm
       \item 32-bit Cortex-M3
       \item 1MB flash
       \item 128kB RAM
@@ -625,9 +624,9 @@
 
   \begin{itemize}
   \item No mechanical engineer
-  \item No experience in 3d design/printing
+  \item No experience in 3D design/printing
   \item Evaluate existing free CAD tools \\
-    Freecad, OpenSCAD, Open CASCADE, ...
+    FreeCAD, OpenSCAD, Open CASCADE, ...
   \end{itemize}
 
   \pause
@@ -639,9 +638,7 @@
   \end{itemize}
 
   \pause
-  \begin{itemize}
-  \item Decided to use \textbf{FreeCAD}
-  \end{itemize}
+  Decided to use \textbf{FreeCAD}
 
   \begin{center}
     \includegraphics[height=2cm]{freecad_logo.eps}
@@ -664,9 +661,9 @@
   \vskip 5mm
 
   \begin{itemize}
-  \item Learning Freecad from scratch
+  \item Learn Freecad from scratch
   \item Design a watch case
-  \item 3D printing
+  \item 3D print it
   \end{itemize}
 
   \pause
@@ -846,7 +843,7 @@
   \end{itemize}
 
   \begin{center}
-    \includegraphics[height=2cm]{plexiglass.eps}
+    \includegraphics[height=3cm]{plexiglass.eps}
   \end{center}
 
   %\note[item]{I want to build this watch, what should I do?}
