--- a/slides/fwatch_fosdem2015.tex
+++ b/slides/fwatch_fosdem2015.tex
@@ -548,6 +548,11 @@
 \begin{frame}{Backlight}
 
   A long story...
+  \vskip 8mm
+  \begin{itemize}
+  \item To read display in the dark
+  \item No backlight available
+  \end{itemize}
 
   \note[item]{Another challenge was the backlight of the LCD display}
   \note[item]{As aI said, the LCD is perfectly readable during day, even under sunlight}
@@ -661,7 +666,7 @@
   \vskip 5mm
 
   \begin{itemize}
-  \item Learn Freecad from scratch
+  \item Learn FreeCAD from scratch
   \item Design a watch case
   \item 3D print it
   \end{itemize}
@@ -669,7 +674,7 @@
   \pause
   \vskip 9mm
   \begin{center}
-    It's time for a live demo!
+    \Large It's time for a live demo!
   \end{center}
 
   \note[item]{We started to learn FreeCAD}
@@ -727,13 +732,15 @@
 \begin{frame}{First 3D print}
 
   \begin{itemize}
-  \item Fused plastic material - Low cost 3D printer
+  \item Fused plastic material - Low-cost 3D printer
   \end{itemize}
 
   \begin{center}
     \includegraphics[height=5cm]{case-design-print-v1.eps}~
     \includegraphics[height=5cm]{case-design-print-v1-2.eps}
   \end{center}
+
+  \textbf{Poor resolution, not good enough}
 
   %\note[item]{FDM = Fused deposition modeling}
   \note[item]{Very first print, done with a cheap 3D printer}
@@ -753,6 +760,8 @@
     \includegraphics[height=5cm]{case-design-print-v2.eps}
   \end{center}
 
+  \textbf{Good resolution, but not smooth, not water-proof}
+
   \note[item]{The second was better}
   \note[item]{The resolution was good}
   \note[item]{But not smooth}
@@ -770,6 +779,8 @@
   \begin{center}
     \includegraphics[height=4.1cm]{case-design-print-v3.eps}
   \end{center}
+
+  \textbf{Smooth, water-proof, but bad fastening}
 
   \note[item]{Then we tried another material, a resin}
   \note[item]{Supposed to be water-resistant}
@@ -918,6 +929,8 @@
 %------------ FRAME --------------------------------------------------
 \begin{frame}{How much does it costs?}
 
+  Estimated cost for small series (without shipping)
+
   \begin{center}
     \begin{table}[h]
       \begin{tabular}{l|r|r|r|l}
@@ -930,8 +943,26 @@
         \multicolumn{1}{|l|}{\textbf{TOTAL per watch}} & \textbf{243 \texteuro}      & \textbf{278 \texteuro}        & \textbf{209 \texteuro}        &  \\ \cline{1-4}
         \multicolumn{1}{|l|}{\textbf{TOTAL}}           & \textbf{243 \texteuro}      & \textbf{2'784 \texteuro}      & \textbf{10'455 \texteuro}     &  \\ \cline{1-4}
       \end{tabular}
-      \caption{Estimated cost for small series (without shipping)}
+      %\caption{Estimated cost for small series (without shipping)}
     \end{table}
+  \end{center}
+
+  \vskip 6mm
+
+  \begin{center}
+    \begin{columns}[T] % align columns
+      \begin{column}{.25\textwidth}
+        3D print : 60 \texteuro \\
+        PCB : 77 \texteuro \\
+      \end{column}
+      %\hfill%
+      \begin{column}{.4\textwidth}
+        Pressure sensor : 19 \texteuro \\
+        GPS module : 19 \texteuro \\
+        Display : 17 \texteuro \\
+        %   MCU : 6 \texteuro
+      \end{column}%
+    \end{columns}
   \end{center}
 
   %\note[item]{The price in euro are converted from swiss franc with the exchange rate of last week}
@@ -1164,11 +1195,14 @@
 %------------ FRAME --------------------------------------------------
 \begin{frame}{Demo}
   \begin{center}
-    \begin{figure}[h!]
-      \centering
-      \movie[height=5cm, width = 5cm, autostart, once, showcontrols=true,
-        borderwidth=1pt, poster]{Applications Demonstration}{../videos/fosdemlow.mp4}
-    \end{figure}
+
+    \large Applications demonstration video
+
+    %\begin{figure}[h!]
+    %  \centering
+    %  \movie[height=5cm, width = 5cm, autostart, once, showcontrols=true,
+     %   borderwidth=1pt, poster]{Applications Demonstration}{../videos/fosdemlow.mp4}
+    %\end{figure}
   \end{center}
   \note{just comment the video. The menu easy to configue thanks to a config
     structure}
