--- a/slides/fwatch_fosdem2015.tex
+++ b/slides/fwatch_fosdem2015.tex
@@ -1293,7 +1293,7 @@
 \begin{frame}{Easy to Make}
   \Large
   \begin{center}
-    How difficult can be? \\
+    How difficult can it be? \\
     \vskip 1cm
     Competitive free tools \\
     \vskip 1cm
@@ -1313,7 +1313,7 @@
 \begin{frame}{Next Generation Free-Open Source}
   \Large
   \begin{center}
-    Free product are real \\
+    Free products are real \\
     \vskip 1cm
     cars, robots, watches, bikes, houses, phones, ... \\
     \vskip 1cm
